k8s/apps/multimedia/radarr/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: radarr
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
  ports:
    - name: http
      port: 7878
      targetPort: 7878
      protocol: TCP
