k8s/apps/multimedia/radarr/ingress.k8s.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: radarr
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
  annotations:
    kubernetes.io/ingress.class: ingress-internal-traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`radarr.emnt.dev`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: radarr
          namespace: radarr
          port: 7878
    - kind: Rule
      match: "Host(`radarr.emnt.dev`) && PathPrefix(`/outpost.goauthentik.io/`)"
      services:
        - name: authentik-server
          namespace: authentik
          port: 9000
